# bevy_steamworks

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: feature_coverage.md
examples/: apps.rs  friends.rs  input.rs  matchmaking.rs  matchmaking_servers.rs  minimal.rs  networking.rs  networking_messages.rs  networking_sockets.rs  networking_utils.rs  remote_play.rs  remote_storage.rs  screenshots.rs  server.rs  social.rs  stats.rs  timeline.rs  ugc.rs  user.rs  utils.rs
src/: apps.rs  availability.rs  cache.rs  client.rs  events.rs  friends.rs  game_server.rs  input.rs  lib.rs  matchmaking.rs  matchmaking_servers.rs  networking.rs  networking_messages.rs  networking_sockets.rs  networking_utils.rs  plugin.rs  plugin_groups.rs  prelude.rs  registry.rs  remote_play.rs  remote_storage.rs  result_ext.rs  screenshots.rs  timeline.rs  ugc.rs  user.rs  user_stats.rs  utils.rs
src/apps/: callbacks.rs  commands.rs  messages.rs  plugin.rs  state.rs  tests.rs  types.rs
src/friends/: callbacks.rs  commands.rs  messages.rs  plugin.rs  state.rs  tests.rs  types.rs  validation.rs
src/game_server/: callbacks.rs  commands.rs  messages.rs  packets.rs  plugin.rs  registry.rs  state.rs  tests.rs  types.rs  validation.rs
src/input/: commands.rs  messages.rs  plugin.rs  state.rs  tests.rs  types.rs  validation.rs
src/matchmaking/: async_results.rs  callbacks.rs  commands.rs  filters.rs  messages.rs  plugin.rs  state.rs  tests.rs  types.rs  validation.rs
src/matchmaking_servers/: callbacks.rs  commands.rs  (+7 more)
tests/: live_spacewar.rs  public_api.rs
(+321 files in other folders)
